<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">OC Transpo Bus Route</string>
    <!-- main -->
    <string name="information" translatable="false">Information</string>
    <string name="search">Search Here</string>
    <string name="route">Routes</string>
    <string name="info">Info</string>
    <string name="favourites">Favourites</string>
    <string name="searchHere">Route name or Number</string>
    <string name="settings">Settings</string>
    <string name="contacts">Contact us</string>
    <string name="fares">Fares</string>
    <string name="feedback">Feedback</string>
    <string name="help">Help</string>
    <string name="instruction">Instruction</string>
    <string name="enterbus">Enter the bus number</string>
    <string name="linkedIn" translatable="false"><a href="https://www.linkedin.com/in/herman-redona-9691491b7/">Herman Redona</a></string>
    <string name="facebook" translatable="false"><a href="https://www.facebook.com/LebrillaHerman/">Herman Redona</a></string>
    <string name="instagram" translatable="false"><a href="https://www.instagram.com/brherman/">Herman Redona</a></string>
    <string name="about">About</string>

</resources>